wrapped sections of youtube clone in correct format (header, hav, section)

--- a/Youtube/styles/header.css
+++ b/Youtube/styles/header.css
@@ -48,22 +48,19 @@
     height: 36px;
     padding-left: 10px;
     font-size: 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(194, 194, 194);
+    border: 1px solid rgb(194, 194, 194);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05); 
     width: 0; /* shrinks content */
 }
 
 .search-bar::placeholder {
-    font-family: Roboto, Arial;
     font-size: 16px;
 }
 
 .search-btn {
     height: 39px;
-    width: 60px;
+    width: 68px;
     background-color: rgb(240, 240, 240);
     border-width: 1px;
     border-style: solid;
@@ -72,9 +69,49 @@
     margin-right: 10px;
 }
 
+.search-btn,
+.voice-search-btn,
+.upload-icon-container,
+.youtube-apps-container,
+.notifications-icon-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
 .search-icon {
     height: 25px;
-    margin-top: 4px;
+}
+
+.search-btn .tooltip, 
+.voice-search-btn .tooltip, 
+.upload-icon-container .tooltip,
+.youtube-apps-container .tooltip,
+.notifications-icon-container .tooltip
+ {
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 2px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.5s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.search-btn:hover .tooltip,
+.voice-search-btn:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+   opacity: 1;
 }
 
 .voice-search-btn {
@@ -87,7 +124,6 @@
 
 .voice-search-icon {
     height: 24px;
-    margin-top: 4px;
 }
 
 .right-section {
@@ -121,7 +157,6 @@
     right: -5px;
     background-color: rgb(200, 0, 0);
     color: white;
-    font-family: Roboto, Arial;
     font-size: 11px;
     padding-left: 5px;
     padding-right: 5px;
