--- a/Youtube/styles/sidebar.css
+++ b/Youtube/styles/sidebar.css
@@ -6,3 +6,25 @@
     top: 55px;
     width: 72px;
 }
+
+.sidebar-link {
+    height: 74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.sidebar-link:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.sidebar-link img {
+    height: 24px;
+    margin-bottom: 4px;
+}
+
+.sidebar-link div {
+    font-size: 10px;
+}
